--- a/JS/projectLoginForm/style.css
+++ b/JS/projectLoginForm/style.css
@@ -40,6 +40,7 @@ body {
     height: 40px;
     border-radius: 10px;
     border: none;
+    outline: none;
     font-family: 'Alata', sans-serif;
     padding-left: 10px;
 }
@@ -52,6 +53,71 @@ body {
     font-weight: bold;
     background-color: #CCFFFF;
     border: none;
+    outline: none;
     border-radius: 10px;
     margin-bottom: 10px;
 }
+
+.form button:hover {
+    background-color: blue;
+    color: white;
+}
+
+/*the container*/
+.box label {
+    display: block;
+    position: relative;
+    font-size: 15px;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+}
+/*hide the brower's default checkbox*/
+.box input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+/*create a custom checkbox*/
+.checkmark {
+    position: absolute;
+    top: 5px;
+    left: -25px;
+    height: 15px;
+    width: 15px;
+    background-color: #eee;
+}
+/*on mouse-over, add a grey background color*/
+.box:hover input ~ .checkmark {
+    background-color: #ccc;
+}
+/*when the checkbox is checked, add a blue background*/
+.box input:checked ~ .checkmark {
+    background-color: #2196f3;
+}
+/*create the checkmark/indicator (hidden when not checked)*/
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+/*show the checkmark when checked*/
+.box input:checked ~ .checkmark:after {
+    display: block;
+}
+/*style the checkmark/indicator*/
+.box .checkmark:after {
+    left: 4px;
+    top: 0;
+    width: 4px;
+    height: 9px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
