--- a/JS/projectLoginForm/style.css
+++ b/JS/projectLoginForm/style.css
@@ -111,7 +111,7 @@ body {
 /*style the checkmark/indicator*/
 .box .checkmark:after {
     left: 4px;
-    top: 0;
+    top: 1px;
     width: 4px;
     height: 9px;
     border: solid white;
@@ -119,4 +119,18 @@ body {
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
+}
+
+.result {
+    font-family: 'Alata', sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+    padding: 30px;
+    text-align: center;
+    max-width: 550px;
+    min-width: 400px;
+    width: 100%;
+    margin: auto;
+    margin-top: -350px;
+    color: white;
 }
