--- a/HTML/projectGooglePage/style.css
+++ b/HTML/projectGooglePage/style.css
@@ -6,17 +6,16 @@
 nav {
     display: flex;
     flex-wrap: nowrap;
-    width: -webkit-fill-available;
     margin-left: 85%;
+    padding-top: 10px;
 }
 
 nav a {
-    display: flex;
-    justify-items: flex-end;
     text-decoration: none;
     color: black;
     padding: 10px;
     align-items: center;
+    font-family: 'Noto Sans', sans-serif;
 }
 
 nav img {
@@ -26,7 +25,7 @@ nav img {
 .container {
     display: flex;
     flex-direction: column;
-    margin-top: 100px;
+    margin-top: 120px;
 }
 
 .logo {
@@ -54,8 +53,40 @@ nav img {
     border-radius: 50px; 
     border: 0.5px solid gray;
     opacity: 0.5;
+    outline: none;
+    padding-left: 50px;
+    padding-right: 41px;
 }
 
 .fa-search {
-    position: relative;
+    position: absolute;
+    margin-left: 15px;
+    margin-top: 12px;    
+}
+
+.fa-keyboard-o {
+    position: absolute;
+    margin-top: 12px;
+    margin-left: 515px;
+}
+
+.button {
+    margin: auto;
+    margin-top: 20px;
+}
+
+.button button {
+    padding: 10px;
+    background: #f5f5f5;
+    color: #53575c;
+    border: none;
+    font-family: 'Noto Sans', sans-serif;
+    outline: none;
+    border-radius: 5px;
+    font-size: 13px;
+}
+
+.button button:hover {
+    border: #d0d0d0;
+    color: black;
 }
