--- a/Project/weather/src/App.css
+++ b/Project/weather/src/App.css
@@ -1,9 +1,64 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+
 * {
     padding: 0;
     margin: 0;
     max-width: 100vw;
     max-height: 100vh;
+    background-color: rgba(0,204,255);
 }
 
+.header {
+    max-width: 100%;
+    max-height: 100px;
+    min-height: 95px;
+    display: flex;
+    justify-content: center;
+}
 
+.logo {
+    margin-top: 10px;
+    width: 10%;
+}
 
+.logo img {
+    width: 100%;
+}
+
+.input-city-name {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.input-css {
+    padding: 10px;
+    outline: none;
+    border: 1px solid white;
+    font-size: 20px;
+    font-family: 'Merriweather', serif;
+    border-radius: 5px;
+}
+
+.btn-submit {
+    margin-left: 5px;
+    cursor: pointer;
+}
+
+.btn-submit:hover {
+    background-color: wheat;
+    font-weight: bold;
+}
+
+.weather-result {
+    max-width: 800px;
+    max-height: 400px;
+    width: 100%;
+    height: 100%;
+    border: 1px solid white;
+    overflow-y: scroll;
+    margin: auto;
+    margin-top: 20px;
+    background-color: white;
+    z-index: 1;
+}
