--- a/Project/weather/src/App.css
+++ b/Project/weather/src/App.css
@@ -38,6 +38,8 @@
     font-size: 20px;
     font-family: 'Merriweather', serif;
     border-radius: 5px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .btn-submit {
@@ -50,3 +52,27 @@
     font-weight: bold;
 }
 
+.weather-result {
+    display: flex;
+    justify-content: center;
+    width: 80%;
+    max-height: 600px;
+    min-height: 550px;
+    margin: auto;
+}
+
+.bg-color {
+    background-color: rgb(255, 255, 255, 0.5);
+}
+
+.result-content {
+    width: 50%;
+}
+
+.result-content ul {
+    list-style-type: none;
+}
+
+.weather-show {
+    width: 50%;
+}
