--- a/Project/weather/src/App.css
+++ b/Project/weather/src/App.css
@@ -1,32 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap');
 
 * {
     padding: 0;
     margin: 0;
-    max-width: 100vw;
-    max-height: 100vh;
-    background-color: rgba(0,204,255);
+    background-color: thistle;
+    font-family: 'Noto Sans JP', sans-serif;
 }
 
-.header {
-    max-width: 100%;
-    max-height: 100px;
-    min-height: 95px;
-    display: flex;
-    justify-content: center;
-}
-
-.logo {
-    margin-top: 10px;
-    width: 10%;
-}
-
-.logo img {
-    width: 100%;
-}
-
+/*CityNameInput.js css*/
 .input-city-name {
-    margin-top: 20px;
     display: flex;
     justify-content: center;
 }
@@ -35,44 +17,43 @@
     padding: 10px;
     outline: none;
     border: 1px solid white;
+    border-radius: 10px;
     font-size: 20px;
-    font-family: 'Merriweather', serif;
-    border-radius: 5px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin: 10px;
 }
 
 .btn-submit {
-    margin-left: 5px;
     cursor: pointer;
 }
 
 .btn-submit:hover {
-    background-color: wheat;
+    background-color: rgba(255, 255, 255, 0.5);
     font-weight: bold;
+}
+
+/*App.js css*/
+.main img {
+    width: 10%;
+}
+
+.main li {
+    list-style-type: none;
+    cursor: pointer;
 }
 
 .weather-result {
     display: flex;
-    justify-content: center;
-    width: 80%;
-    max-height: 600px;
-    min-height: 550px;
-    margin: auto;
+    flex-direction: column;
 }
 
-.bg-color {
-    background-color: rgb(255, 255, 255, 0.5);
+.weather-result-city {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
-.result-content {
-    width: 50%;
-}
-
-.result-content ul {
-    list-style-type: none;
-}
-
-.weather-show {
-    width: 50%;
+.city-list {
+    width: 800px;
+    height: 300px;
+    overflow-y: scroll;
 }
