--- a/Project/weather/src/App.css
+++ b/Project/weather/src/App.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Vampiro+One&display=swap');
 
 * {
     padding: 0;
     margin: 0;
-    background-color: thistle;
+    background-color: rgba(129, 181, 241);
     font-family: 'Noto Sans JP', sans-serif;
 }
 
@@ -32,28 +33,72 @@
 }
 
 /*App.js css*/
-.main img {
-    width: 10%;
+.main {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;   
 }
 
-.main li {
+.loading-status {
+    width: 100%;
+    max-height: 50px;
+    min-height: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loading-status-text {
+    font-size: 20px;
+    font-style: italic;
+    font-family: 'Vampiro One', cursive;
+    color: white;
+}
+
+.weather-result {
+    max-width: 900px;
+    min-width: 850px;
+    max-height: 500px;
+    min-height: 450px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+
+.city-list {
+    width: 30%;
+    height: 100%;
+    border-right: 1px solid white;
+    overflow-y: scroll;
+}
+
+.title {
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+}
+
+.title p {
+    font-size: 20px;
+    font-weight: bold;
+    padding: 10px;
+}
+
+.city-list-result {
+    margin-top: 50px;
+}
+
+.city-list-result li {
+    padding: 10px;
     list-style-type: none;
     cursor: pointer;
 }
 
-.weather-result {
-    display: flex;
-    flex-direction: column;
-}
-
-.weather-result-city {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.city-list {
-    width: 800px;
-    height: 300px;
-    overflow-y: scroll;
+.city-list-result li:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+    font-weight: bold;
 }
