--- a/Project/weather/src/App.css
+++ b/Project/weather/src/App.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Noto Sans JP', sans-serif;
+    background-color: rgba(71, 167, 255, 73);
 }
 
 /*CityNameInput.js CSS*/
@@ -49,7 +50,6 @@
 .weather-result {
     width: 1200px;
     height: 500px;
-    border: 1px solid black;
     display: flex;
     flex-direction: row;
 }
@@ -57,7 +57,7 @@
 .city-list {
     width: 300px;
     height: 500px;
-    border-right: 1px solid black;
+    border-right: black;
 }
 
 .key-search {
@@ -122,7 +122,146 @@
     flex-direction: column;
 }
 
-.follow-result-weather-day {
+/*day1*/
+.main-result-weather {
+    width: 900px;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.weather-temp {
     display: flex;
     flex-direction: row;
+}
+
+.state-name-temp {
+    width: 450px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.weather-state-name {
+    width: 450px;
+    text-align: center;
+}
+
+.the-temp {
+    width: 450px;
+    font-size: 90px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.ico-abbr {
+    width: 450px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.ico-abbr img {
+    margin: auto;
+}
+
+.min-max-temp {
+    width: 450px;
+    display: flex;
+    flex-direction: row;
+}
+
+.min-temp {
+    width: 225px;
+    text-align: center;
+}
+
+.max-temp {
+    width: 225px;
+    text-align: center;
+}
+
+.follow-result-weather-day {
+    width: 900px;
+    height: 270px;
+    display: flex;
+    flex-direction: row;
+}
+
+/*day2*/
+.day2-result-weather {
+    width: 180px;
+    height: 270px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.applicable-date {
+    text-align: center;
+}
+
+.weather-temp2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.state-name-weather2 {
+    width: 180px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.state-name-weather2 p {
+    font-size: 15px;
+}
+
+.weather-state-name2 {
+    width: 90px;
+    text-align: center;
+}
+
+.the-temp2 {
+    width: 180px;
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.ico-abbr2 {
+    width: 90px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.ico-abbr2 img {
+    margin: auto;
+    width: 90px;
+}
+
+.min-max-temp2 {
+    width: 180x;
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px;
+}
+
+.min-temp2 {
+    width: 90px;
+    text-align: center;
+}
+
+.max-temp2 {
+    width: 90px;
+    text-align: center;
 }
