--- a/Project/weather/src/App.css
+++ b/Project/weather/src/App.css
@@ -9,264 +9,79 @@
     margin: 0;
     padding: 0;
     font-family: 'Noto Sans JP', sans-serif;
-    background-color: rgba(71, 167, 255, 73);
 }
 
-/*CityNameInput.js CSS*/
-.input-city-name {
-    max-height: 50px;
-    min-height: 45px;
-    height: 100%;
+.main {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    background-image: url('./assets/img/bg.jpg');
+    background-size: cover;
+}
+
+.input-weather-name {
+    width: 100%;
+    height: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px;
+}
+
+.input-city-name {
     background-color: transparent;
 }
 
 .input-css {
     padding: 10px;
-    font-size: 20px;
-    outline: none;
-    border: 0.5px solid grey;
     border-radius: 10px;
-    color: black;
+    outline: none;
+    border: 1px solid rgba(255, 255, 255, 1);
+    background-color: transparent;
+    color: white;
+    font-family: 'Noto Sans JP', sans-serif;
 }
 
-.input-city-name button {
+.btn-submit {
     cursor: pointer;
     margin-left: 10px;
 }
 
-/*App.js CSS*/
-.main {
+.weather-result {
+    width: 100%;
+    height: 80%;
+    color: white;
+    display: flex;
+    justify-content: center;
+}
+
+.weather-result-content {
+    border-radius: 10px;
+    width: 60%;
+    height: 80%;
+    background-color: rgba(255, 255, 255, 0.2);
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.loading-status {
-    color: red;
-    height: 30px;
-
-}
-
-.weather-result {
-    width: 1200px;
-    height: 500px;
-    display: flex;
-    flex-direction: row;
-}
-
-.city-list {
-    width: 300px;
-    height: 500px;
-    border-right: black;
 }
 
 .key-search {
-    width: 300px;
-    height: 30px;
-    position: fixed;
+    width: 60%;
+    height: 10%;
     display: flex;
-    align-items: center;
+    flex-direction: column;
     justify-content: center;
-}
-
-.key-search p {
-    font-family: 'Noto Sans JP', sans-serif;
+    align-items: center;
+    position: fixed;
+    color: white;
+    font-size: 25px;
     font-weight: bold;
-    font-size: 20px;
+    font-family: 'Noto Sans JP', sans-serif;
 }
 
 .key-search-list {
-    width: 300px;
-    height: 470px;
-    margin-top: 30px;
+    width: 100%;
+    height: 90%;
+    margin-top: 10%;
     overflow-y: scroll;
 }
 
-.city-list li {
-    list-style-type: none;
-    padding: 10px;
-    cursor: pointer;
-}
-
-.city-list li:hover {
-    background-color: rgba(240, 240, 240);
-}
-
-.weather-content {
-    width: 900px;
-    height: 500px;
-    display: flex;
-    flex-direction: column;
-}
-
-.weather-title {
-    width: 900px;
-    height: 30px;
-    position: fixed;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.weather-title p {
-    font-family: 'Noto Sans JP', sans-serif;
-    font-weight: bold;
-    font-size: 20px;
-}
-
-.weather-result-main {
-    width: 900px;
-    height: 470px;
-    margin-top: 30px;
-    display: flex;
-    flex-direction: column;
-}
-
-/*day1*/
-.main-result-weather {
-    width: 900px;
-    height: 200px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.weather-temp {
-    display: flex;
-    flex-direction: row;
-}
-
-.state-name-temp {
-    width: 450px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.weather-state-name {
-    width: 450px;
-    text-align: center;
-}
-
-.the-temp {
-    width: 450px;
-    font-size: 90px;
-    font-weight: bold;
-    text-align: center;
-}
-
-.ico-abbr {
-    width: 450px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.ico-abbr img {
-    margin: auto;
-}
-
-.min-max-temp {
-    width: 450px;
-    display: flex;
-    flex-direction: row;
-}
-
-.min-temp {
-    width: 225px;
-    text-align: center;
-}
-
-.max-temp {
-    width: 225px;
-    text-align: center;
-}
-
-.follow-result-weather-day {
-    width: 900px;
-    height: 270px;
-    display: flex;
-    flex-direction: row;
-}
-
-/*day2*/
-.day2-result-weather {
-    width: 180px;
-    height: 270px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.applicable-date {
-    text-align: center;
-}
-
-.weather-temp2 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
-}
-
-.state-name-weather2 {
-    width: 180px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.state-name-weather2 p {
-    font-size: 15px;
-}
-
-.weather-state-name2 {
-    width: 90px;
-    text-align: center;
-}
-
-.the-temp2 {
-    width: 180px;
-    font-size: 30px;
-    font-weight: bold;
-    text-align: center;
-}
-
-.ico-abbr2 {
-    width: 90px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.ico-abbr2 img {
-    margin: auto;
-    width: 90px;
-}
-
-.min-max-temp2 {
-    width: 180x;
-    display: flex;
-    flex-direction: row;
-    margin-top: 10px;
-}
-
-.min-temp2 {
-    width: 90px;
-    text-align: center;
-}
-
-.max-temp2 {
-    width: 90px;
-    text-align: center;
-}
