--- a/Project/weather/src/App.css
+++ b/Project/weather/src/App.css
@@ -65,7 +65,7 @@
     height: 550px;
     display: flex;
     flex-direction: row;
-    overflow: hidden;
+    /*overflow: hidden;*/
     border-radius: 10px;
 }
 
@@ -73,7 +73,7 @@
     position: relative;
     display: flex;
     flex-direction: row;    
-    left: 0px;
+    left: -1080px;
     transition: all 1s ease-in;
 }
 
@@ -127,8 +127,18 @@
     background-color: rgba(255, 255, 255, 0.2);
 }
 
-.weather-day-result {
-    width: 1080px;
-    height: 550px;
-    background-color: rgba(255, 255, 255, 0.2);
+.city-title {
+    width: 100%;
+    height: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 25px;
+    font-weight: bold;
+    font-family: 'Noto Sans JP', sans-serif;
+}
+
+.weather-result {
+    width: 100%;
 }
