--- a/Project/weather/src/App.css
+++ b/Project/weather/src/App.css
@@ -126,46 +126,49 @@
     height: 550px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    border: 1px solid white;
     background-color: rgba(255, 255, 255, 0.2);
 }
 
-.city-title {
+.weather-main-day-result {
+    width: 50%;
+    height: 50%;
+    border: 1px solid white;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+.weather-main-day-header {
     width: 100%;
     height: 15%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 40px;
-    font-weight: bold;
-    font-family: 'Noto Sans JP', sans-serif;
+    flex-direction: row;    
+    border: 1px solid white;
 }
 
-.weather-day-detail {
-    width: 70%;
-    height: 85%;
+.city-title {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.main-day-min-max-temp {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.wind-speed {
     display: flex;
     flex-direction: column;
-    border: 1px solid white;
-}
-
-.weather-day-header {
-    height: 15%;
-    border: 1px solid white;
-    display: flex;
-    flex-direction: row;
-}
-
-.weather-day {
-    width: 50%;
-    font-size: 30px;
-    font-weight: bold;
-    border: 1px solid white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .weather-day-result {
