--- a/Project/weather/src/App.css
+++ b/Project/weather/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 ::-webkit-scrollbar {
     width: 0px;
@@ -74,13 +75,14 @@
     display: flex;
     flex-direction: row;    
     left: -1080px;
-    transition: all 1s ease-in;
+    transition: all 0.5s ease-in;
 }
 
 .weather-result-search {
     width: 1080px;
     height: 550px;
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(0, 0, 0, 0.6);
+    border-radius: 10px;
 }
 
 .key-search {
@@ -101,6 +103,11 @@
     height: 85%;
     overflow-y: scroll;
 }
+.type-city-name {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .key-search-list ul {
     display: flex;
@@ -118,7 +125,8 @@
 }
 
 .key-search-list li:hover {
-    color: black;
+    color: rgba(255, 255, 255, 0.4);
+    transition: all 0.2s ease-in;
 }
 
 .weather-result-detail {
@@ -127,52 +135,134 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid white;
-    background-color: rgba(255, 255, 255, 0.2);
+    justify-content: center;
 }
 
 .weather-main-day-result {
-    width: 50%;
-    height: 50%;
-    border: 1px solid white;
+    width: 60%;
+    height: 60%;
     border-radius: 10px;
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(0, 0, 0, 0.6);
 }
 
 .weather-main-day-header {
     width: 100%;
     height: 15%;
     display: flex;
-    flex-direction: row;    
-    border: 1px solid white;
+    flex-direction: row;
 }
 
-.city-title {
-    width: 50%;
+.weather-main-day-header button {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    color: white;
+    width: 10%;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.weather-main-day-header button:hover {
+    color: rgba(255, 255, 255, 0.4);
+    transition: all 0.2s ease-in;
+}
+
+.city-title {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 25px;
     font-weight: bold;
 }
 
-.main-day-min-max-temp {
-    width: 50%;
+.weather-main-day-content {
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: row;
-    justify-content: space-evenly;
+    width: 100%;
+    height: 85%;
 }
 
 .wind-speed {
+    width: 30%;
     display: flex;
     flex-direction: column;
-    font-family: 'Times New Roman', Times, serif;
+    margin: 10px 0 0 10px;
 }
 
-.weather-day-result {
-    width: 1080px;
-    height: 550px;
+.wind-speed p {
+    padding: 5px;
+    font-size: 15px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.weather-state-name {
+    width: 35%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.weather-abbr {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+}
+
+.state-name {
+    width: 100%;
+    height: 20%;
+    font-size: 25px;
+    font-family: 'Montserrat', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.weather-temp {
+    width: 35%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 120px;
+}
+
+.weather-following-days {
+    width: 60%;
+    height: 40%;
+    margin-top: 10px;
+    background-color: rgba(0, 0, 0, 0.6);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+}
+
+.follow-day-size {
+    width: 30%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-evenly;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+.follow-day-size p {
+    font-family: 'Montserrat', sans-serif;
+}
+
+.follow-day-size img {
+    width: 60%;
+}
+
+.follow-day-size:hover {
     background-color: rgba(255, 255, 255, 0.2);
+    transition: all 0.5s ease-in;
 }
