--- a/Project/weather/src/App.css
+++ b/Project/weather/src/App.css
@@ -266,3 +266,7 @@
     background-color: rgba(255, 255, 255, 0.2);
     transition: all 0.5s ease-in;
 }
+
+#another-day1 {
+    background-color: rgba(255, 255, 255, 0.2);
+}
