--- a/Project/weather/src/App.css
+++ b/Project/weather/src/App.css
@@ -1,272 +1,277 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import "~antd/dist/antd.css";
 
 ::-webkit-scrollbar {
-    width: 0px;
-    background: transparent; /* make scrollbar transparent */
+  width: 0px;
+  background: transparent; /* make scrollbar transparent */
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Noto Sans JP', sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: "Noto Sans JP", sans-serif;
 }
 
 .main {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    background-image: url('./assets/img/bg.jpg');
-    background-size: cover;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background-image: url("./assets/img/bg.jpg");
+  background-size: cover;
 }
 
 .input-weather-name {
-    width: 100%;
-    height: 20%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  height: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .input-city-name {
-    background-color: transparent;
+  background-color: transparent;
 }
 
 .input-css {
-    padding: 10px;
-    border-radius: 10px;
-    outline: none;
-    border: 1px solid rgba(255, 255, 255, 1);
-    background-color: transparent;
-    color: white;
-    font-family: 'Noto Sans JP', sans-serif;
+  padding: 10px;
+  border-radius: 10px;
+  outline: none;
+  border: 1px solid rgba(255, 255, 255, 1);
+  background-color: transparent;
+  color: white;
+  font-family: "Noto Sans JP", sans-serif;
 }
 
 .btn-submit {
-    cursor: pointer;
-    margin-left: 10px;
+  cursor: pointer;
+  margin-left: 10px;
 }
 
 .btn-submit:hover {
-    background-color: rgba(255, 255, 255, 0.2);
-    transition: all 0.5s ease-in;
+  background-color: rgba(255, 255, 255, 0.2);
+  transition: all 0.5s ease-in;
 }
 
 .weather-result {
-    width: 100%;
-    height: 80%;
-    color: white;
-    display: flex;
-    justify-content: center;
+  width: 100%;
+  height: 80%;
+  color: white;
+  display: flex;
+  justify-content: center;
 }
 
 .weather-slider {
-    width: 1080px;
-    height: 550px;
-    display: flex;
-    flex-direction: row;
-    overflow: hidden;
-    border-radius: 10px;
+  width: 1080px;
+  height: 550px;
+  display: flex;
+  flex-direction: row;
+  overflow: hidden;
+  border-radius: 10px;
 }
 
 .weather-slider-wrapper {
-    position: relative;
-    display: flex;
-    flex-direction: row;    
-    left: -1080px;
-    transition: all 0.5s ease-in;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  left: -1080px;
+  transition: all 0.5s ease-in;
 }
 
 .weather-result-search {
-    width: 1080px;
-    height: 550px;
-    background-color: rgba(0, 0, 0, 0.6);
-    border-radius: 10px;
+  width: 1080px;
+  height: 550px;
+  background-color: rgba(0, 0, 0, 0.6);
+  border-radius: 10px;
 }
 
 .key-search {
-    width: 100%;
-    height: 15%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 25px;
-    font-weight: bold;
-    font-family: 'Noto Sans JP', sans-serif;
+  width: 100%;
+  height: 15%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 25px;
+  font-weight: bold;
+  font-family: "Noto Sans JP", sans-serif;
 }
 
 .key-search-list {
-    width: 100%;
-    height: 85%;
-    overflow-y: scroll;
+  width: 100%;
+  height: 85%;
+  overflow-y: scroll;
 }
 .type-city-name {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .key-search-list ul {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    padding-left: 10%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding-left: 10%;
 }
 
 .key-search-list li {
-    list-style-type: none;
-    cursor: pointer;
-    font-weight: bold;
-    padding: 10px;
-    flex: 1 0 25%;
+  list-style-type: none;
+  cursor: pointer;
+  font-weight: bold;
+  padding: 10px;
+  flex: 1 0 25%;
 }
 
 .key-search-list li:hover {
-    color: rgba(255, 255, 255, 0.4);
-    transition: all 0.2s ease-in;
+  color: rgba(255, 255, 255, 0.4);
+  transition: all 0.2s ease-in;
 }
 
 .weather-result-detail {
-    width: 1080px;
-    height: 550px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  width: 1080px;
+  height: 550px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .weather-main-day-result {
-    width: 60%;
-    height: 60%;
-    border-radius: 10px;
-    background-color: rgba(0, 0, 0, 0.6);
+  width: 60%;
+  height: 60%;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 .weather-main-day-header {
-    width: 100%;
-    height: 15%;
-    display: flex;
-    flex-direction: row;
+  width: 100%;
+  height: 15%;
+  display: flex;
+  flex-direction: row;
 }
 
 .weather-main-day-header button {
-    background-color: transparent;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    color: white;
-    width: 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  color: white;
+  width: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .weather-main-day-header button:hover {
-    color: rgba(255, 255, 255, 0.4);
-    transition: all 0.2s ease-in;
+  color: rgba(255, 255, 255, 0.4);
+  transition: all 0.2s ease-in;
 }
 
 .city-title {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 25px;
-    font-weight: bold;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 25px;
+  font-weight: bold;
 }
 
 .weather-main-day-content {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 85%;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 85%;
 }
 
 .wind-speed {
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-    margin: 10px 0 0 10px;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  margin: 10px 0 0 10px;
 }
 
 .wind-speed p {
-    padding: 5px;
-    font-size: 15px;
-    font-family: 'Montserrat', sans-serif;
+  padding: 5px;
+  font-size: 15px;
+  font-family: "Montserrat", sans-serif;
 }
 
 .weather-state-name {
-    width: 35%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+  width: 35%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .weather-abbr {
-    width: 100%;
-    height: 80%;
-    display: flex;
-    justify-content: center;
+  width: 100%;
+  height: 80%;
+  display: flex;
+  justify-content: center;
 }
 
 .state-name {
-    width: 100%;
-    height: 20%;
-    font-size: 25px;
-    font-family: 'Montserrat', sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  height: 20%;
+  font-size: 25px;
+  font-family: "Montserrat", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .weather-temp {
-    width: 35%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 120px;
+  width: 35%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Montserrat", sans-serif;
+  font-size: 120px;
 }
 
 .weather-following-days {
-    width: 60%;
-    height: 40%;
-    margin-top: 10px;
-    background-color: rgba(0, 0, 0, 0.6);
-    border-radius: 10px;
-    display: flex;
-    flex-direction: row;
+  width: 60%;
+  height: 40%;
+  margin-top: 10px;
+  background-color: rgba(0, 0, 0, 0.6);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: row;
 }
 
 .follow-day-size {
-    width: 30%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    justify-content: space-evenly;
-    cursor: pointer;
-    border-radius: 10px;
+  width: 30%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-evenly;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.follow-day-size.active {
+  background: rgba(255, 255, 255, 0.2);
 }
 
 .follow-day-size p {
-    font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .follow-day-size img {
-    width: 60%;
+  width: 60%;
 }
 
 .follow-day-size:hover {
-    background-color: rgba(255, 255, 255, 0.2);
-    transition: all 0.5s ease-in;
+  background-color: rgba(255, 255, 255, 0.2);
+  transition: all 0.5s ease-in;
 }
 
 #another-day1 {
-    background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.2);
 }
