loading login2step project

--- a/login2step/src/App.css
+++ b/login2step/src/App.css
@@ -1,38 +1,77 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+/* Chrome. Safari, Edge, Opera */
+
+input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+
+input[type=number] {
+  -moz-appearance: none;
+}
+
 .App {
-  text-align: center;
+  width: 100vw;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.login-form {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.login-container {
+  width: 80%;
+  height:300px;
+  display: flex;
+  flex-direction: row;
+  border: 1px solid black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+.login-content {
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  left: 0;
+}
+
+.login-block {
+  width: 80vw;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.login-block p {
+  margin-left: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.login-block input {
+  padding: 10px;
+  margin: 10px;
+  outline: none;
+}
+
+.login-btn {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.login-btn button {
+  margin: 0 10px;
+  width: 100px;
+  padding: 10px;
+  align-self: flex-end;
 }
