--- a/quanlynhansu/src/App.css
+++ b/quanlynhansu/src/App.css
@@ -14,27 +14,131 @@
 }
 
 .NavBar {
-  position: fixed;
-  width: 100vw;
-  height: 70px;
+  min-height: 10vh;
   display: flex;
-  flex-direction: row;
-  background-color: greenyellow;
-}
-
-.logo {
-  width: 40%;
-  display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 
-.logo img {
-  width: 10%;
+.left-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 13px;
 }
 
-.logo h1 {
-  font-size: 16px;
+.left-bar .logo-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin-left: 10px;
 }
 
+.left-bar img {
+  width: 85px;
+  padding: 5px;
+}
+
+.right-bar {
+  width: 60%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.dropdown {
+  position: relative;
+}
+
+.right-bar button {
+  background: transparent;
+  outline: none;
+  border: none;
+  font-size: 18px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.right-bar button:hover {
+  color: blue;
+}
+
+.dropdown ul {
+  position: absolute;
+  background: antiquewhite;
+  /* margin-top: 5px; */
+  width: 250px;
+  min-height: 100px;
+  font-size: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  list-style-type: none;
+  border-radius: 5px;
+  font-weight: bold;
+  cursor: pointer;
+  opacity: 0;
+  pointer-events: none;
+  transform: translateY(0px);
+  transition: all 0.4s ease;
+}
+
+.dropdown li {
+  width: 100%;
+  /* height: 100%; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+
+.dropdown li:hover {
+  background-color: wheat;
+}
+
+.dropdown button:focus + ul {
+  opacity: 1;
+  pointer-events: all;
+  transform: translateY(10px);
+}
+
+.burger-nav {
+  display: none;
+}
+
+.burger-nav div {
+  width: 25px;
+  height: 3px;
+  background-color: black;
+  margin: 5px;
+}
+
+@media screen and (max-width: 1024px) {
+  .right-bar {
+    width: 60%;
+  }
+
+  .right-bar button {
+    font-size: 17px;
+  }
+
+  .left-bar {
+    font-size: 12px;
+  }
+
+  .left-bar img {
+    width: 80px;
+  }
+
+  .dropdown ul {
+    width: 210px;
+  }
+}
+
+@media screen and (max-width: 840px) {
+  body {
+     display: none;
+  }
+}
